Created list for text content

--- a/my_list.html
+++ b/my_list.html
@@ -1,1 +1,5 @@
-"H.E.R" "Sabrina Claudia" "Frank Ocean" "The Weeknd" "Snoh Aalegra"
+<li>"H.E.R"</li>
+<li>"Sabrina Claudia"</li>
+<li>"Frank Ocean"</li>
+<li>"The Weeknd"</li>
+<li>"Snoh Aalegra"</li>
